--- a/addons/gst-web/src/index.html
+++ b/addons/gst-web/src/index.html
@@ -124,7 +124,7 @@
       direction: ltr;
     }
   </style>
-  <title>Selkies - webrtc</title>
+  <title>Jeevops - webrtc</title>
 </head>
 
 <body>
