--- a/addons/gst-web/src/index.html
+++ b/addons/gst-web/src/index.html
@@ -318,8 +318,8 @@
                 <li>Fullscreen: Ctrl + Shift + F or Fullscreen Button</li>
                 <li>Remote (Game) Cursor Lock: Ctrl + Shift + LeftClick</li>
                 <li>Open Side Menu: Ctrl + Shift + M or Side Button</li>
-                <li><a style="color:inherit;text-decoration:none" target="_blank" rel="noopener noreferrer" href="https://github.com/selkies-project/selkies-gstreamer/blob/main/README.md#citations-in-academic-publications"><b>Please cite within your publication for academic usage</b></a></li>
-              </ul>
+<!--                 <li><a style="color:inherit;text-decoration:none" target="_blank" rel="noopener noreferrer" href="https://github.com/selkies-project/selkies-gstreamer/blob/main/README.md#citations-in-academic-publications"><b>Please cite within your publication for academic usage</b></a></li>
+              </ul> -->
               </small>
               </p>
               <hr />
